# danikk_engine

./: .cproject  .project  meson.build
include/danikk_engine/: built_in_meshes.h  color.h  danikk_engine.h  data_manager.h  dynamic_mesh.h  features.h  font.h  fps.h  gui.h  input.h  key_bind.h  localization.h  math.h  mesh.h  model.h  shader.h  sprite.h  style.h  texture.h  texture_methods.h  voxel_map.h
include/danikk_engine/fun/: gui_anchor_circler.h
include/danikk_engine/gui/: subwindow.h
include/danikk_engine/internal/: anchor.h  asset.h  data_manager.h  error.h  font.h  gl_memory_manager.h  gl_object_manager.h  glexec.h  global_usings.h  shader_data.h  stb.h  texture_data.h  texture_methods.h  vertex_attrib.h
include/danikk_engine/matrix/: pos.h  uv.h
include_internal/GLFW/: glfw3.h
include_internal/glad/: glad.h
source/: asset.cpp  danikk_engine.cpp  data_manager.cpp  dynamic_mesh.cpp  error.cpp  features.cpp  font.cpp  gl_object_manager.cpp  glad.cpp  gui.cpp  gui_subwindow.cpp  input.cpp  key_bind.cpp  localization.cpp  matrix.cpp  mesh.cpp  meson.build  model.cpp  shader.cpp  sprite.cpp  stb.cpp  style.cpp  texture.cpp  texture_methods.cpp
source/internal/: asset.cpp  gl_memory_manager.cpp  meson.build
subprojects/: danikk_framework
